--- a/res/values/aim_strings.xml
+++ b/res/values/aim_strings.xml
@@ -54,4 +54,8 @@
     <!-- Quick unlock -->
     <string name="unlock_quick_unlock_control_title">Quick unlock</string>
     <string name="unlock_quick_unlock_control_summary">Unlock automatically when the correct PIN is entered\nNote: Dont mess up Buddy's will only work for 4 digit PIN !</string>
+
+    <!-- Freedom Hub -->
+    <string name="freedom_hub_title">Freedom Hub</string>
+    <string name="header_category_freedom">Customization</string>
 </resources>
