--- a/res/values/aim_strings.xml
+++ b/res/values/aim_strings.xml
@@ -11,6 +11,11 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
+<!-- Custom Settings -->    
+  <!-- Dashboard -->
+<string name="header_category_custom">ROM Control</string>
+
 <!-- Device Info Settings -->
 
     <!-- Aim Rom Version -->
